--- a/re-furama-management/src/app/component/contract/list-contract/list-contract.component.html
+++ b/re-furama-management/src/app/component/contract/list-contract/list-contract.component.html
@@ -65,18 +65,27 @@
       </button>
     </div>
   </div>
-  <table class="table table-striped">
+  <table class="table">
+    <thead>
     <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Tên dịch vụ</th>
-      <th scope="col">Tên nhân viên</th>
-      <th scope="col">Tên khách hàng</th>
       <th scope="col">Ngày bắt đầu</th>
       <th scope="col">Ngày kết thúc</th>
       <th scope="col">Tiền đặt cọc</th>
-      <th scope="col">Tổng tiền</th>
-      <th colspan="2" scope="col">Các dịch vụ đi kèm</th>
+      <th scope="col">Nhân viên</th>
+      <th scope="col">Khách hàng</th>
+      <th scope="col">Dịch vụ</th>
     </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let contract of contractList">
+      <td>{{contract.startDate}}</td>
+      <td>{{contract.endDate}}</td>
+      <td>{{contract.deposit}}</td>
+      <td>{{contract.employee.name}}</td>
+      <td>{{contract.customer.name}}</td>
+      <td>{{contract.facility.name}}</td>
+    </tr>
+    </tbody>
   </table>
 
 </div>
