--- a/re-furama-management/src/app/component/facility/list-facility/list-facility.component.html
+++ b/re-furama-management/src/app/component/facility/list-facility/list-facility.component.html
@@ -22,25 +22,78 @@
     </div>
 
   </div>
-  <div class="row" style="box-sizing: border-box">
-    <div *ngFor="let facility of facilityList" class="card col-4" style="box-sizing: border-box">
-      <img style="height: 300px" src="https://ngocthiensup.com/wp-content/uploads/hinh-nen-zoom-van-phong-05.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">{{facility.name}}</h5>
-        <p class="card-text">Room size: {{facility.area}}</p>
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="row col-10" style="box-sizing: border-box">
+      <div *ngFor="let facility of facilityList" class="card col-4" style="box-sizing: border-box">
+        <img style="height: 300px" src="{{facility.img}}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{facility.name}}</h5>
+          <p class="card-text">Room size: {{facility.area}}</p>
+        </div>
+        <div class="card-footer">
+          <div class="row">
+            <button style="margin-right: 30px;margin-left: 10px" type="button" class="btn btn-outline-success col-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Xóa
+            </button>
+            <button  type="button" class="btn btn-outline-success col-5" data-bs-toggle="modal" data-bs-target="#modalUpdate" data-bs-whatever="@mdo">Sửa</button>
+          </div>
+        </div>
+        <br>
       </div>
-      <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
-      </div>
-      <br>
     </div>
+    <div class="col-1"></div>
   </div>
+
   <app-footer></app-footer>
 
 </div>
 </body>
 
 <!--modal xóa -->
-<!-- JavaScript Bundle with Popper -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
+<!--modal update-->
+<div class="modal fade" id="modalUpdate" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel1">Update</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Recipient:</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="message-text" class="col-form-label">Message:</label>
+            <textarea class="form-control" id="message-text"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Send message</button>
+      </div>
+    </div>
+  </div>
+</div>
 </html>
