--- a/re-furama-management/src/app/component/footer/footer.component.html
+++ b/re-furama-management/src/app/component/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="#00695C text-center text-white">
   <div class="text-center p-3" style="background-color: #00695C">
     © 2020 Copyright:
-    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    <a class="text-white" href="https://www.facebook.com/tai.tan.5264">nguyentantai1610@gmail.com</a>
   </div>
 </footer>
