--- a/re-furama-management/src/app/app.component.html
+++ b/re-furama-management/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-list-contract></app-list-contract>
+<section class="bg-image" style="background-image: url('https://img.pikbest.com/backgrounds/20190227/herbal-background-various-green-icons-repeat-design-free-vector_2771620.jpg')">
+<app-list-facility></app-list-facility>
+</section>
