--- a/ss7_router_and_service/practice/angular-product-management/src/app/product/product-create/product-create.component.html
+++ b/ss7_router_and_service/practice/angular-product-management/src/app/product/product-create/product-create.component.html
@@ -19,7 +19,7 @@
     </tr>
     <tr>
       <td></td>
-      <td><button>Tạo mới</button></td>
+      <td><button type="submit">Tạo mới</button></td>
     </tr>
   </table>
 </form>
