--- a/ss7_router_and_service/practice/angular-product-management/src/app/product/product-list/product-list.component.html
+++ b/ss7_router_and_service/practice/angular-product-management/src/app/product/product-list/product-list.component.html
@@ -17,10 +17,10 @@
     <td>{{product.price}}</td>
     <td>{{product.description}}</td>
     <td>
-      <button [routerLink]="['product/detail',product.id]">Chi tiết</button>
+      <button [routerLink]="['/product/detail',product.id]">Chi tiết</button>
     </td>
     <td>
-      <button [routerLink]="['product/update',product.id]">Sửa</button>
+      <button [routerLink]="['/product/update',product.id]">Sửa</button>
     </td>
     <td>
       <button (click)="remove(product.name,product.id)" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
