--- a/re-furama-management/src/app/app.component.html
+++ b/re-furama-management/src/app/app.component.html
@@ -1,3 +1,1 @@
-<section class="bg-image" style="background-image: url('https://img.pikbest.com/backgrounds/20190227/herbal-background-various-green-icons-repeat-design-free-vector_2771620.jpg')">
-<app-list-facility></app-list-facility>
-</section>
+<router-outlet></router-outlet>
