--- a/re-furama-management/src/app/component/customer/list-customer/list-customer.component.html
+++ b/re-furama-management/src/app/component/customer/list-customer/list-customer.component.html
@@ -65,12 +65,8 @@
     </div>
     <div class="col-2">
       <!--            <a class="btn btn-warning text-center" href="/customer/create">Thêm mới khách hàng</a>-->
-      <button type="button"
-              class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Thêm mới khách hàng
-      </button>
+      <button routerLink="/component/customer/create"  class="btn btn-primary">Thêm mới</button>
     </div>
-
   </div>
   <table class="table table-striped">
     <thead>
