--- a/re-furama-management/src/app/component/navigation/navigation.component.html
+++ b/re-furama-management/src/app/component/navigation/navigation.component.html
@@ -8,13 +8,13 @@
         <a class="nav-link" href="" style="color: white">Employee</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="" style="color: white">Customer</a>
+        <a class="nav-link" href="" style="color: white" routerLink="/customer/list">Customer</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="" style="color: white">Service</a>
+        <a class="nav-link" href="" style="color: white" routerLink="/facility/list">Service</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="" style="color: white">Contract</a>
+        <a class="nav-link" href="" style="color: white" routerLink="/contract/list">Contract</a>
       </li>
     </ul>
   </div>
