--- a/re-furama-management/src/app/component/facility/list-facility/list-facility.component.html
+++ b/re-furama-management/src/app/component/facility/list-facility/list-facility.component.html
@@ -10,15 +10,11 @@
   <app-header></app-header>
   <app-navigation></app-navigation>
   <div class="row">
-    <!--        <div class="col-2">-->
-    <!--            <a class="btn btn-success text-center" href="/customer/listCustomerJoinContract">Khách hàng đang sử dụng-->
-    <!--                dịch vụ </a>-->
-    <!--        </div>-->
     <div class="col-8">
       <h1 class="text-center">Danh sách dịch vụ</h1>
     </div>
     <div class="col-2">
-      <a class="btn btn-warning text-center" href="/facility/create">Thêm mới dịch vụ</a>
+      <a routerLink="/facility/create" class="btn btn-warning text-center">Thêm mới dịch vụ</a>
     </div>
 
   </div>
