--- a/re-furama-management/src/app/component/facility/list-facility/list-facility.component.html
+++ b/re-furama-management/src/app/component/facility/list-facility/list-facility.component.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Danh sách khách hàng</title>
+  <title>Danh sách dịch vụ</title>
   <!-- CSS only -->
 </head>
 <body>
@@ -14,7 +14,7 @@
       <h1 class="text-center">Danh sách dịch vụ</h1>
     </div>
     <div class="col-2">
-      <a routerLink="/facility/create" class="btn btn-warning text-center">Thêm mới dịch vụ</a>
+      <button routerLink="/facility/create" type="button" class="btn btn-success">Thêm mới</button>
     </div>
 
   </div>
@@ -22,17 +22,17 @@
     <div class="col-1"></div>
     <div class="row col-10" style="box-sizing: border-box">
       <div *ngFor="let facility of facilityList" class="card col-4" style="box-sizing: border-box">
-        <img style="height: 300px" src="{{facility.img}}" class="card-img-top" alt="...">
+        <img style="height: 300px" src="{{facility.img}}" class="card-img-top" alt="Không có ảnh">
         <div class="card-body">
           <h5 class="card-title">{{facility.name}}</h5>
           <p class="card-text">Room size: {{facility.area}}</p>
         </div>
         <div class="card-footer">
           <div class="row">
-            <button style="margin-right: 30px;margin-left: 10px" type="button" class="btn btn-outline-success col-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button (click)="facilityRemove = facility" type="button" class="btn btn-outline-success col-5" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-right: 30px;margin-left: 10px">
               Xóa
             </button>
-            <button  type="button" class="btn btn-outline-success col-5" data-bs-toggle="modal" data-bs-target="#modalUpdate" data-bs-whatever="@mdo">Sửa</button>
+            <button [routerLink]="['/facility/update',facility.id]" type="button" class="btn btn-outline-success col-5">Sửa</button>
           </div>
         </div>
         <br>
@@ -55,41 +55,14 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        <p>Bạn có muốn xóa <span style="color: red">{{facilityRemove.name}}</span></p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+        <button (click)="removeFacility()" type="button" class="btn btn-primary" data-bs-dismiss="modal">Xóa</button>
       </div>
     </div>
   </div>
 </div>
 
-<!--modal update-->
-<div class="modal fade" id="modalUpdate" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel1">Update</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="mb-3">
-            <label for="recipient-name" class="col-form-label">Recipient:</label>
-            <input type="text" class="form-control" id="recipient-name">
-          </div>
-          <div class="mb-3">
-            <label for="message-text" class="col-form-label">Message:</label>
-            <textarea class="form-control" id="message-text"></textarea>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
-      </div>
-    </div>
-  </div>
-</div>
 </html>
