--- a/re-furama-management/src/app/component/customer/create-customer/create-customer.component.html
+++ b/re-furama-management/src/app/component/customer/create-customer/create-customer.component.html
@@ -32,13 +32,13 @@
       </div>
       <div class="mb-3">
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+          <input formControlName="gender" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
           <label class="form-check-label" for="flexRadioDefault1">
             Nam
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+          <input formControlName="gender" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
           <label class="form-check-label" for="flexRadioDefault2">
             Đàn bà
           </label>
