--- a/re-furama-management/src/app/component/customer/update-customer/update-customer.component.html
+++ b/re-furama-management/src/app/component/customer/update-customer/update-customer.component.html
@@ -39,13 +39,13 @@
       </div>
       <div class="mb-3">
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+          <input formControlName="gender" value="true" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
           <label class="form-check-label" for="flexRadioDefault1">
             Nam
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+          <input formControlName="gender" [value]="false"  class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
           <label class="form-check-label" for="flexRadioDefault2">
             Đàn bà
           </label>
@@ -86,3 +86,4 @@
 </div>
 </body>
 </html>
+
