--- a/re-furama-management/src/app/component/facility/create-facility/create-facility.component.html
+++ b/re-furama-management/src/app/component/facility/create-facility/create-facility.component.html
@@ -6,67 +6,86 @@
   <!-- CSS only -->
 </head>
 <body>
+
 <div class="row"><h1 class="text-center">Thêm mới dịch vụ</h1></div>
 <div class="row">
   <div class="col-3"></div>
-  <div class="col-6">
-    <form id="facilityType" style="height: 300px">
+  <div  class="col-6">
+
+    <form [formGroup]="formCreateFacilyty" *ngIf="formCreateFacilyty" style="height: 300px" (ngSubmit)="createFacility()">
       <div class="mb-3">
         <label for="exampleInputEmail2" class="form-label">Tên dịch vụ</label>
-        <input type="text" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp">
+        <input formControlName="name" type="text" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp">
+        <p style="color: red" *ngIf="formCreateFacilyty.controls.name.hasError('required') && formCreateFacilyty.controls.name.touched">Nhập tên dịch vụ</p>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputEmail9" class="form-label">Link ảnh mô tả</label>
+        <input formControlName="img" type="text" class="form-control" id="exampleInputEmail9" aria-describedby="emailHelp">
       </div>
       <div class="mb-3">
         <label for="exampleInputEmail3" class="form-label">Diện tích sử dụng</label>
-        <input type="text" class="form-control" id="exampleInputEmail3" aria-describedby="emailHelp">
+        <input formControlName="area" type="text" class="form-control" id="exampleInputEmail3" aria-describedby="emailHelp">
+        <p style="color: red" *ngIf="formCreateFacilyty.controls.area.hasError('required') && formCreateFacilyty.controls.area.touched">Nhập diện tích sử dụng</p>
+
       </div>
       <div class="mb-3">
         <label for="exampleInputEmail15" class="form-label">Chi phí thuê</label>
-        <input type="text" class="form-control" id="exampleInputEmail15" aria-describedby="emailHelp">
+        <input formControlName="cost" type="text" class="form-control" id="exampleInputEmail15" aria-describedby="emailHelp">
+        <p style="color: red" *ngIf="formCreateFacilyty.controls.cost.hasError('required') && formCreateFacilyty.controls.cost.touched">Nhập chi phí thuê</p>
       </div>
       <div class="mb-3">
         <label for="exampleInputEmail5" class="form-label">Số người tối đa</label>
-        <input type="text" class="form-control" id="exampleInputEmail5" aria-describedby="emailHelp">
-
+        <input formControlName="maxPeople" type="text" class="form-control" id="exampleInputEmail5" aria-describedby="emailHelp">
+        <p style="color: red" *ngIf="formCreateFacilyty.controls.maxPeople.hasError('required') && formCreateFacilyty.controls.maxPeople.touched">Nhập số người tối đa</p>
       </div>
 
       <div class="mb-3">
         <label for="exampleInputEmail17" class="form-label">Kiểu thuê</label>
-        <select id="exampleInputEmail17" class="form-select form-select-lg mb-3"
+        <select formControlName="rentType" id="exampleInputEmail17" class="form-select form-select-lg mb-3"
                 aria-label=".form-select-lg example">
-          <option>
+          <option value="" selected>---Chọn kiểu thuê---</option>
+          <option *ngFor="let rentType of listRentType" [ngValue]="rentType">{{rentType.name}}
           </option>
         </select>
+        <p style="color: red" *ngIf="formCreateFacilyty.controls.rentType.hasError('required') && formCreateFacilyty.controls.rentType.touched">Chọn kiểu thuê</p>
+
       </div>
       <div class="mb-3">
-        <label for="facilityType" class="form-label">Loại dịch vụ</label>
-        <select class="form-select form-select-lg mb-3"
+        <p>Loại dịch vụ</p>
+        <select formControlName="facilityType" class="form-select form-select-lg mb-3"
                 aria-label=".form-select-lg example">
-          <option name="facilityType">
+          <option value="" selected>---Chọn loại dịch vụ---</option>
+          <option *ngFor="let facilityType of listFacilityType" [ngValue]="facilityType">{{facilityType.name}}
           </option>
         </select>
+        <p style="color: red" *ngIf="formCreateFacilyty.controls.facilityType.hasError('required') && formCreateFacilyty.controls.facilityType.touched">Chọn kiểu thuê</p>
       </div>
 
       <div id="standardRoom" class="mb-3">
         <label for="standardRoom" class="form-label">Tiêu chuẩn phòng</label>
-        <input type="text" class="form-control"  aria-describedby="emailHelp">
+        <input formControlName="standardRoom" type="text" class="form-control"  aria-describedby="emailHelp">
+        <p style="color: red" *ngIf="formCreateFacilyty.controls.standardRoom.hasError('required') && formCreateFacilyty.controls.standardRoom.touched">Nhập tiêu chuẩn phòng</p>
+
       </div>
       <div id="descriptionOtherConvenience" class="mb-3">
         <label for="descriptionOtherConvenience" class="form-label">Mô tả tiện nghi khác</label>
-        <input type="text" class="form-control"  aria-describedby="emailHelp">
+        <input formControlName="descriptionOtherConvenience" type="text" class="form-control"  aria-describedby="emailHelp">
+        <p style="color: red" *ngIf="formCreateFacilyty.controls.descriptionOtherConvenience.hasError('required') && formCreateFacilyty.controls.descriptionOtherConvenience.touched">Vui lòng mô tả tiện nghi</p>
+
       </div>
       <div id="poolArea" class="mb-3">
         <label  for="poolArea" class="form-label">Diện tích hồ bơi</label>
-        <input type="text" class="form-control"  aria-describedby="emailHelp">
+        <input formControlName="poolArea" type="text" class="form-control"  aria-describedby="emailHelp">
       </div>
       <div id="numberOfFloors" class="mb-3">
         <label for="numberOfFloors" class="form-label">Số tầng</label>
-        <input type="text" class="form-control"  aria-describedby="emailHelp">
+        <input formControlName="numberOfFloors" type="text" class="form-control"  aria-describedby="emailHelp">
       </div>
       <div id="facilityFree" class="mb-3">
         <label for="facilityFree" class="form-label">Dịch vụ miễn phí</label>
-        <input type="text" class="form-control"  aria-describedby="emailHelp">
+        <input formControlName="facilityFree" type="text" class="form-control"  aria-describedby="emailHelp">
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button [disabled]="!formCreateFacilyty.valid" type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
   <div class="col-3"></div>
